<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    android:weightSum="11" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/text"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/change_title"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/extra_notes"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/extra_notes"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="top|left"
        android:inputType="textMultiLine"
        android:lines="2" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:background="#aaa" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/direction_action"
        android:textStyle="italic" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1.3"
        android:orientation="horizontal"
        android:weightSum="6" >

        <Button
            android:id="@+id/change_plus_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/plus" />

        <Button
            android:id="@+id/change_minus_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/minus" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:background="#aaa" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/difficulty"
        android:textStyle="italic" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:orientation="horizontal"
        android:weightSum="8" >

        <Button
            android:id="@+id/easy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.7"
            android:padding="10dp"
            android:background="#ffff33"
            android:text="@string/easy" />

        <Button
            android:id="@+id/medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_weight="2.4"
            android:padding="10dp"
            android:background="#ffff33"
            android:text="@string/medium" />

        <Button
            android:id="@+id/hard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_weight="1.7"
            android:padding="10dp"
            android:background="#ffff33"
            android:text="@string/hard" />
    </LinearLayout>
    

    <View
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:background="#aaa" />

    <Button
    	android:layout_marginTop="5dp"
        android:id="@+id/save_close"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginLeft="2dp"
        android:padding="10dp"
        android:layout_weight="1.2"
        android:background="#ffff33"
        android:text="@string/save_close" />

</LinearLayout>