<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/holo_green_light"
    android:orientation="horizontal"
    android:id="@+id/header"
    android:weightSum="10" >

    <ImageView
        android:id="@+id/character_activity"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:clickable="true"
        android:contentDescription="@string/character_description"
        android:src="@drawable/temp_images" />

    <ImageView
        android:id="@+id/vice_activity"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:clickable="true"
        android:contentDescription="@string/vice_description"
        android:src="@drawable/temp_images" />

    <ImageView
        android:id="@+id/todo_activity"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:clickable="true"
        android:contentDescription="@string/todo_description"
        android:src="@drawable/temp_images" />

    <ImageView
        android:id="@+id/inventory_activity"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:clickable="true"
        android:contentDescription="@string/inventory_description"
        android:src="@drawable/temp_images" />

    <ImageView
        android:id="@+id/rewards_activity"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:clickable="true"
        android:contentDescription="@string/rewards_description"
        android:src="@drawable/temp_images" />

</LinearLayout>