<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/create_reward_description"
        android:hint="@string/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:ems="10" />

    <EditText
        android:id="@+id/create_reward_cost"
        android:hint="@string/cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/create_reward_description"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:inputType="number"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/create_reward_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/create_reward_cost"
        android:layout_marginTop="17dp"
        android:text="@string/submit" />

</RelativeLayout>
