<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    android:weightSum="11" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/text"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/change_reward_title"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/extra_notes"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/extra_reward_notes"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="top|left"
        android:inputType="textMultiLine"
        android:lines="2" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:background="#aaa" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/price"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/reward_price"
        android:layout_width="10dp"
        android:layout_height="0dp"
        android:gravity="top|left"
        android:lines="2" />
    

    <View
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:background="#aaa" />

    <Button
    	android:layout_marginTop="5dp"
        android:id="@+id/save_close"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginLeft="2dp"
        android:padding="10dp"
        android:layout_weight="1.2"
        android:background="#00B2EE"
        android:text="@string/save_close" />

</LinearLayout>