<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:weightSum="100" >

    <include
        android:id="@+id/include1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/header" />

    <TextView
        android:id="@+id/rewards_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rewards"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/gold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        android:weightSum="100" >

        <EditText
            android:id="@+id/add_reward_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="75"
            android:hint="@string/add_reward" />

        <Button
            android:id="@+id/add_reward_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:background="#82b8d0"
            android:text="@string/plus" />
    </LinearLayout>

    
     <ListView
        android:id="@+id/rewards_list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="50" />

</LinearLayout>